# MyDjangoPortfolio

./: .env.example  .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
api/: pyproject.toml
api/core/: admin.py  models.py  translation.py  urls.py  views.py
api/core/migrations/: 0001_initial.py  0002_typeskill_alter_personalinfo_options_and_more.py  0003_alter_education_id_alter_job_id_and_more.py  0004_remove_skill_description.py  0005_skill_description.py  0006_skill_description_cs_skill_description_en.py  0007_personalinfo_active.py  0008_skill_order_typeskill_order.py  0009_typeskill_color_alter_typeskill_order.py  0010_skill_percent.py  0011_project.py  0012_photo.py  0013_personalinfo_about_me_rendered_and_more.py  0014_remove_personalinfo_about_me_rendered.py  0015_project_url.py  0016_rename_title_job_company_alter_education_description_and_more.py  0017_alter_education_title.py  0018_socialmediaaccount.py  0019_skill_title_cs_skill_title_en_and_more.py  0020_education_description_cs_education_description_en_and_more.py  0021_job_description_rendered_alter_job_description_and_more.py  0022_remove_job_description_rendered_and_more.py  0023_personalinfo_short_description.py
api/core/static/css/: main.css
api/core/templates/: index.html  indextest.html
api/locale/cs/LC_MESSAGES/: django.mo  django.po
api/my_django_portfolio/: settings.py  urls.py  wsgi.py
core/: admin.py  models.py  tests.py  translation.py  urls.py  views.py
frontend/: TODO
my_django_portfolio/: asgi.py  settings.py  urls.py  wsgi.py
(+13 files in other folders)
